# gmail-Skill-

./: .gitignore  AGENT.md  CLAUDE.md  README.md  pyproject.toml
examples/: browser_email_poc.sh
skills/gmail/: BROWSER_SETUP.md  RLM_AGENT_GUIDE.md  SKILL.md
skills/gmail/agent/: README_DEPRECATED.md  __init__.py  adaptive_optimizer.py  agent_core.py  function_orchestrator.py  goal_interpreter.py  result_formatter.py  state_manager.py
skills/gmail/examples/: agent-conversations.md
skills/gmail/references/: rlm-function-reference.md  rlm-patterns.md  troubleshooting.md
skills/gmail/scripts/: __init__.py  browser_email_fetch.py  browser_gmail_extractor.py  gmail_agent.py  gmail_bulk_read.py  gmail_mark_read.py  gmail_rlm_cache.py  gmail_rlm_helpers.py  gmail_rlm_repl.py  gmail_security_helpers.py  gmail_security_schemas.py  gmail_security_workflows.py  gmail_smart.py
